# libgsf

./: .gitignore  CMakeLists.txt  autogen.sh  build.sh  conanfile.txt  configure.ac  gsf-config.cmake.in  gsf-config.h.in.1
.github/workflows/: build.yml
cmake/: ios.toolchain.cmake
conan/: ios-arm64  ios-armv7  macos-arm
conan/base/: apple  ios  macos
doc/: Makefile.am
tmp/: CMakeLists.txt  gsf.c
tools/: CMakeLists.txt  gsf.c  main.cpp
